# cfa

./: .gitignore  404.html  CFA_LLM_Demo.dbc  CFA_LLM_Demo.html  CFA_LLM_Demo.ipynb  CFA_LLM_Demo.ipynb.py  CFA_LLM_Demo.py  CFA_LLM_Demo_fixed (1).dbc  CFA_LLM_Demo_fixed.dbc  CFA_LLM_Demo_fixed.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANUAL_TESTING_GUIDE.md  README.md  ROADMAP.md  SECURITY.md  blog.html  cfa-v2-whitepaper.html  cfa-v2-whitepaper_patched.html  cfa_demo_complete.ipynb  cfa_demo_complete.py  cfa_llm_demo_complete.py  cfa_policy_engine_precost_estimator.py  index.html  markdown-page.html  mcp.json  pyproject.toml  sitemap.xml
.claude/: launch.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  deploy-pypi.yml  governance.yml
assets/js/: 02b1bd75.c703aa82.js  0480b142.3e96b914.js  0e384e19.1017f80c.js  15df8608.353adfb2.js  1a20bc57.d18471ca.js  1d28008f.9ae1195d.js  1f4725da.2c5387cc.js  249dc374.97f0389e.js  26433f06.3e5226e5.js  331fe8f3.fb613ab4.js  4c678320.6efd9030.js  588425e5.760d8fde.js  59362658.572460b2.js  59a1af64.143f0a4a.js  5bf5ed7d.86b1f3d1.js  5fbc5cf1.00804510.js  67c27146.d78b4167.js  68d41008.a85d2da5.js  717bbef6.51f32d28.js  7180d3e2.a54a8388.js  7c6aad35.4b40233e.js  804b58ce.91197800.js  814f3328.c2c67f3a.js  8539d8eb.1c911751.js  a1a900e3.426849a8.js  a8bb5334.62d07991.js  (+13 more)
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
dashboards/: cfa-compliance-posture.json  cfa-governance-overview.json  cfa-lifecycle-indices.json
demos/: cfa_demo_complete.dbc  cfa_demo_complete.py  cfa_llm_demo_complete.dbc  cfa_llm_demo_complete.py
docs/: api.html  architecture-notes.html  architecture-notes.md  backends.html  behavior-spec.html  cfa-v2-whitepaper.en.html  cfa-v2-whitepaper.html  cli.html  faq.html  faq.md  getting-started.html  guide.html  guide.md  index.en.html  index.html  intro.html  linkedin-article.md  mcp-server.html  open-questions.md  policy-bundles.html  reporting.html  whitepaper.html
drafts/: CFA_IMPLEMENTATION_PLAN.md  CFA_MARKET_RESEARCH_2026.md  ROADMAP.md  ROADMAP_OLD.md
examples/: cfa_demo.py  fiscal_governance.yaml  fiscal_pt_br_normalizer.py  full_pipeline.py  llm_systematizer.py  runtime_gate.py  standalone_governance.py  standalone_lifecycle.py  standalone_resolution.py
files/: __init__.py  demo.py  kernel.py  normalizer.py  policy_engine.py  test_kernel.py  types.py
policies/: compliance-strict-v1.yaml  eu-ai-act-v1.yaml  finops-strict-v1.yaml  lgpd-v1.yaml  prod-v1.yaml
pt-BR/: 404.html  blog.html  index.html  markdown-page.html  sitemap.xml
tests/: conftest.py  test_adapters.py  test_airflow_governance_gate.py  test_audit_persistent.py  test_behavior.py  test_behavior_llm.py  test_catalog.py  test_cli_validation.py  test_codegen.py  test_config.py  test_context.py  test_context_persistent.py  test_dbt_backend.py  test_hashing.py  test_indices.py  test_integration.py  test_intensive.py  test_kernel.py  test_mcp.py  test_metrics.py  test_normalizer.py  test_normalizer_llm.py  test_notify.py  test_otel.py  test_partial_execution.py  test_planner.py  test_policy.py  test_policy_bundle.py  test_promotion.py  test_reporting.py  test_resolve.py  test_resolve_llm.py  test_runtime.py  test_runtime_validation.py  test_sandbox.py  test_serialization.py  test_signature.py  test_sql_backend.py  test_state_projection.py  test_static_validation.py  (+4 more)
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
(+266 files in other folders)
