[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfa"
version = "2.0.0"
description = "Contextual Flux Architecture — Governed intent resolution for data systems"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/cfa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
